--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@originjs/vite-plugin-federation": "^1.1.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
